--- a/TMS project/src/produits.html
+++ b/TMS project/src/produits.html
@@ -50,7 +50,7 @@
     </nav>
     </header>
 
-    <section id="textContent" >
+ <!--   <section id="textContent" >
 
   <div class="row">
 
@@ -59,7 +59,7 @@
 
 
 </div>
-    </section>
+    </section>-->
 
     <h4>Nous vous presentons ici bas la pallette de nos produits les plus vendus.</h4>
 
