--- a/TMS project/src/apropos.html
+++ b/TMS project/src/apropos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technologie Médicale Sarl</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../Tms-main.github.io-main/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="../images/logo1.jpg" alt="Logo" style="height: 80px; margin-right: 10px;">
+                    <img src="../Tms-main.github.io-main/logo1.jpg" alt="Logo" style="height: 80px; margin-right: 10px;">
                     Technologie Médicale Sarl
                 </a>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
@@ -35,7 +35,7 @@
                             <a href="apropos.html">À Propos</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html">Contact</a>
+                            <a href="Contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -47,6 +47,7 @@
         <!-- Autres sections de la page -->
 
         <!-- Section À Propos -->
+        <div class="section1">
         <section id="apropos" class="py-5">
             <div class="container">
                 <h2 class="text-center">À Propos</h2>
@@ -73,12 +74,38 @@
                         <p>Au fil des ans, nous avons réalisé de nombreuses avancées et atteint des jalons importants. Nous avons été reconnus pour notre innovation et notre engagement envers l'excellence dans le domaine des technologies médicales.</p>
                     </div>
                 </div>
-
-                <div class="text-center">
-                    <a href="contact.html" class="btn btn-primary">Contactez-nous</a>
-                </div>
             </div>
         </section>
+        </div>
+        <div class="section2">
+        <section id="Temoignage de nos clients" py="4" >
+            <div class="container">
+                <h2 class="text-center">Temoignage de nos clients</h2>
+                    <p class="lead text-center">Expériences de succès avec Technologie Médicale Company</p>
+            <div class="row my-5">
+                <div class="col-md-6">
+            <div class="testimonial">
+                <h3>Dr. Jean Dupont</h3>
+                <p>Les produits de Technologie Médicale Company ont transformé notre pratique avec leur fiabilité et innovation.</p>
+                <h4>  @drjeandupont</h4>
+            </div>
+                </div>
+            <div class="col-md-6">
+                <div class="testimonial">
+                    <h3>Clinique Santé</h3>
+                    <p>Nous avons constaté une amélioration significative dans nos services grâce à leurs équipements médicaux.</p>
+                    <h4>@cliniquesante</h4>
+                </div>
+                </div>
+            </div>
+    </div>
+
+        </section>
+    </div>
+
+        <div class="text-center">
+            <a href="Contact.html" class="btn btn-primary">Contactez-nous</a>
+        </div>
     </main>
 
     <footer>
@@ -100,6 +127,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../Tms-main.github.io-main/script.js"></script>
 </body>
 </html>
